Bug 1260475 - Add an option to disable GC slices triggered by painting. r=terrence a=kwierso

MozReview-Commit-ID: B81ZHm0EgZB